frontend: Migrate register type to new TensorType
Now registers always have a TensorType instead of either a ConcreteRelationType or DataType.
This enables direct support for multi-dimensional registers.